--- a/PixWordsSolver/Views/Home/Index.cshtml
+++ b/PixWordsSolver/Views/Home/Index.cshtml
@@ -3,23 +3,36 @@
 }
 @model PixWordsSolver.ViewModels.GuessWordViewModel
 
+<div id="fb-root"></div>
+
+<script>
+    (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "//connect.facebook.net/bg_BG/sdk.js#xfbml=1&version=v2.5&appId=723289691063995";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
+
 <div class="jumbotron">
     <h2>PixWords Bulgaria - Познавач на думи</h2>
-    <h3>@ViewBag.Result</h3>
+    <div class="fb-like pull-right" data-href="https://www.facebook.com/PixWords-Bulgaria-%D0%9F%D0%BE%D0%B7%D0%BD%D0%B0%D0%B2%D0%B0%D1%87-%D0%BD%D0%B0-%D0%B4%D1%83%D0%BC%D0%B8-223496741338014/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+    <h3 class="text-success">@ViewBag.Result</h3>
+    @Html.ValidationSummary("", new { @class = "text-danger" })
     @using (Html.BeginForm("Index", "Home", FormMethod.Post))
     {
         <div class="form-group">
             @Html.LabelFor(m => m.Word)
-            @Html.TextBoxFor(m => m.Word, new { @class = "form-control", placeholder = "Дума" })
+            @Html.TextBoxFor(m => m.Word, new { @class = "form-control", placeholder = "*****к*", autocomplete = "off" })
             <span id="helpBlock" class="help-block">Попълнете празните места със звездичка. Пример *****к*</span>
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Letters)
-            @Html.TextBoxFor(m => m.Letters, new { @class = "form-control", placeholder = "Букви" })
+            @Html.TextBoxFor(m => m.Letters, new { @class = "form-control", placeholder = "чивагкдялит", autocomplete="off"})
             <span id="helpBlock" class="help-block">Пример чивагкдялит</span>
         </div>
-        @Html.ValidationSummary()
-        ;
         <button type="submit" class="btn btn-success">Познай</button>
     }
 </div>
