--- a/PixWordsSolver/Views/Home/Index.cshtml
+++ b/PixWordsSolver/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
 <div class="fb-like" data-href="https://www.facebook.com/PixWords-Bulgaria-%D0%9F%D0%BE%D0%B7%D0%BD%D0%B0%D0%B2%D0%B0%D1%87-%D0%BD%D0%B0-%D0%B4%D1%83%D0%BC%D0%B8-223496741338014/" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
 <div class="jumbotron">
     <h2>PixWords Bulgaria - Познавач на думи</h2>
-
+    <img src="/Content/assets/2/вл.jpg"/>
     <h3 class="text-success">@ViewBag.Result</h3>
     @Html.ValidationSummary("", new { @class = "text-danger" })
     @using (Html.BeginForm("Index", "Home", FormMethod.Post))
