--- a/PixWordsSolver/Views/Home/Index.cshtml
+++ b/PixWordsSolver/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
         <div class="form-group">
             @Html.LabelFor(m => m.GuessWordViewModel.Letters)
             @Html.TextBoxFor(m => m.GuessWordViewModel.Letters, new { @class = "form-control", placeholder = "чивагкдялит", autocomplete = "off" })
-            <span id="helpBlock" class="help-block">Не са зъдължителни, но могат да ограничат резултатите. Пример чивагкдялит</span>
+            <span id="helpBlock" class="help-block">Не са задължителни, но могат да ограничат резултатите. Пример чивагкдялит</span>
         </div>
         <button type="submit" class="btn btn-success">Познай</button>
     }
